*6715* padding and spacing issues in forms

--- a/styles/form.less
+++ b/styles/form.less
@@ -36,7 +36,7 @@
 	label {
 		display: block;
 		font-weight: bold;
-		margin: 0px 0px 3px 0px;
+		padding: 12px 0px 3px 0px;
 	}
 
 
@@ -48,7 +48,7 @@
 		font-size: 80%;
 		color: #999;
 		font-weight: normal;
-		margin: 2px 0px;
+		padding: 2px 0px;
 	}
 
 	input, textarea, select {
@@ -84,6 +84,12 @@
 		clear: none !important;
 		margin-right: 2%;
 		margin-bottom: 0px;
+	}
+
+	ul.checkbox_and_radiobutton
+	{
+		margin-bottom: 0px;
+		padding-bottom: 0px;
 	}
 
 	.checkbox_and_radiobutton li {
